--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "express": "3.4.0",
-    "jade": "*"
+    "consolidate": "*",
+    "dustjs-helpers": "*",
+    "dustjs-linkedin": "*"
   }
 }
