--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "engines": {
-    "node": "0.10.x"
-  },
-  "engines": {
+    "node": "0.10.x",
     "npm": "2.1.x"
   },
   "scripts": {
