--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "express": "3.4.0",
+    "body-parser": "~1.5.2",
     "consolidate": "*",
     "dustjs-helpers": "*",
     "dustjs-linkedin": "*",
