--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "consolidate": "*",
     "dustjs-helpers": "*",
     "dustjs-linkedin": "*",
+    "moment": "~2.5.1",
     "mongoose": "~3.6.19",
     "connect-mongo": "~0.4.0"
   }
