--- a/config/view_config.json
+++ b/config/view_config.json
@@ -1,8 +1,9 @@
 {
-    "dashboard":{
+    "perf_entries_chart":{
         "js": [
             "https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js",
-            "http://code.highcharts.com/highcharts.js"
+            "http://code.highcharts.com/highcharts.js",
+            "/js/perf_entries_charts.js"
         ],
         "css": [
             "/css/bootstrap.min.css"
