--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "consolidate": "*",
     "dustjs-helpers": "*",
     "dustjs-linkedin": "*",
-    "moment": "~2.5.1",
+    "moment": "^2.24.0",
     "mongoose": "~3.6.19",
     "connect-mongo": "~0.4.0"
   }
