--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "engines": {
-    "node": "0.10.x",
-    "npm": "2.1.x"
+    "node": "12.16.1",
+    "npm": "6.13.4"
   },
   "scripts": {
     "start": "node app.js"
